--- a/_site.yml
+++ b/_site.yml
@@ -31,6 +31,8 @@ navbar:
     - text: "GitHub"
       icon: fa-github
       href: https://github.com/albertomontesanto         # CHANGE HERE 
+    - text: "Donate"
+      href: donate.md         # CHANGE HERE 
 output:
   html_document:
     theme: spacelab
